--- a/WarehouseEcommerce/Areas/Shop/Views/Test/Index.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Test/Index.cshtml
@@ -32,10 +32,10 @@
                                 @foreach (var item in Model)
                                 {
 
-                                    <input type="hidden" name="item_name_@i" value="@item.ProductMaster.Name">
-                                    <input type="hidden" name="item_number_@i" value="@item.ProductMaster.SKUCode">
-                                    <input type="hidden" name="amount_@i" value="@item.Price">
-                                    <input type="hidden" name="quantity_@i" value="@item.Qty">
+                                    <input type="hidden" name="item_name_1" value="@item.ProductMaster.Name">
+                                    <input type="hidden" name="item_number_1" value="@item.ProductMaster.SKUCode">
+                                    <input type="hidden" name="amount_1" value="@item.Price">
+                                    <input type="hidden" name="quantity_1" value="@item.Qty">
                                     break;
                                 }
 
