--- a/WMS/Views/Shifts/_Listing.cshtml
+++ b/WMS/Views/Shifts/_Listing.cshtml
@@ -26,6 +26,7 @@
     <div class="col-md-offset-2 col-md-10 bottom-right">
         <a class="btn btn-primary alert-info pull-right" href="/shifts/add">Add Shifts</a>
     </div>
+    <P> shelf life gurantee <br /> <bold> testting</bold></p>
 </div>
 
 
