--- a/WMS/Views/Pallets/_PalletDisptachDetail.cshtml
+++ b/WMS/Views/Pallets/_PalletDisptachDetail.cshtml
@@ -21,7 +21,7 @@
                             @*   @Html.DropDownListFor(m => m.SentMethodID, Model.AllSentMethods, new { @class = "chosen-select" })*@
                         </div>
                     </div>
-                    <div class="data-detail">
+                    <div class="data-detail" style="@(string.IsNullOrEmpty(Model.NetworkCode)?"":"display:none")">
                         <div class="col-md-12 p-0 pull-left">
                             <div class="col-md-4 pull-left pallet-quantity-hlabel">Tracking No.</div>
                             <div class="input-group col-md-8 pull-left">
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="data-ddp" style="display:none">
+                    <div class="data-ddp" style="@(string.IsNullOrEmpty(Model.NetworkCode)?"display:none":"")">
                         <div class="col-md-12 p-0 pull-left">
                             <div class="col-md-4 pull-left pallet-quantity-hlabel">Select Service</div>
                             <div class="col-md-8 pull-left" id="divserviceDriver">@Html.DropDownListFor(m => m.NetworkCode, Model.AllDpdServices, "Select Service", new { @class = "chosen-select" })</div>
