--- a/WarehouseEcommerce/Areas/Shop/Views/Orders/GetAddress.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Orders/GetAddress.cshtml
@@ -11,16 +11,9 @@
         /*height: 113px;*/
     }
 
-    .shippingMethod {
-        background: #f7f7f9;
-        display: block;
-        border-bottom: 1px solid #ffffff;
-        color: #434343;
-        position: relative;
-        text-transform: uppercase;
-    }
+    
 </style>
-<div class="about bg-white billing-address">
+<div class="about bg-white get-address-page">
     <div class="container-fluid custom-max-width">
         <div class="row">
             <div class="col-md-3 col-sm-12 ">
