--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
@@ -6,9 +6,11 @@
     ViewBag.Title = "ProductCategories";
 }
 
-<div id="product-search" class="container .custom-max-width">
+
+
+<div id="product-search" class="container custom-max-width">
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-3 col-lg-2 col-sm-12">
             <div class="filters cat-filter">
                 <h2>Refined by</h2>
                 <button type="button" class="btn filterCollapse" data-toggle="collapse" data-target="#accordion">
@@ -84,7 +86,7 @@
 
             </div>
         </div>
-        <div id="content" class="col-md-10">
+        <div id="content" class="col-md-9 col-lg-10 col-sm-12">
             <ul class="breadcrumb">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Special Offers</a></li>
