--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -48,7 +48,7 @@
                                 <button class="btn btn-link dropdown-toggle test" data-toggle="dropdown">
                                     <span>@ViewBag.Symbol @ViewBag.CurrencyName</span>&nbsp;<i class="fa fa-angle-down"></i>
                                 </button>
-                                <ul class="dropdown-menu">
+                                <ul class="dropdown-menu currency-dropdown">
                                     @if (ViewBag.Currencies != null)
                                     {
                                         foreach (var item in ViewBag.Currencies)
