--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -454,8 +454,9 @@ div.required .control-label:before {
     position: absolute;
     right: 0;
     left: unset !important;
-    top: 64px;
-    height: 500px;
+    top: 62px;
+    max-height: 500px;
+    height: auto;
     overflow-y: scroll;
 }
 
