--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
@@ -30,9 +30,9 @@
                                 <div class="product-layout col-xs-12">
                                     <div class="product-thumb transition">
                                         <div class="image">
-                                            <a href="@Url.Action("ProductDetails", "Products", new { productId = item.ProductId })"><img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath +item.DefaultImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@item.Name" title="@item.Name" class="img-responsive center-block sami" /></a>
+                                            <a href="@Url.Action("ProductDetails", "Products", new { productId = item.ProductId })"><img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath +item.DefaultImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@item.Name" title="@item.Name" class="img-responsive center-block" /></a>
                                             <!-- Smartshop Images Start -->
-                                            <a href="@Url.Action("ProductDetails", "Products", new { productId = item.ProductId })"><img src="@(!string.IsNullOrEmpty(item.HoverImage) ? ViewBag.BaseFilePath +item.HoverImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
+                                            <a href="@Url.Action("ProductDetails", "Products", new { productId = item.ProductId })"><img src="@(!string.IsNullOrEmpty(item.HoverImage) ? ViewBag.BaseFilePath +item.HoverImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.png")" class="img-responsive second-img" alt="hover image" /></a>
                                             <!-- Smartshop Images End -->
                                             <div class="topbutton">
                                                 <button type="button" data-toggle="tooltip" title="Add to Wish List">
@@ -63,7 +63,7 @@
                                         </div>
                                         <div class="clearfix"></div>
                                         <div class="button-group">
-                                            <button type="button" class="acart" onclick="AddToCart(@item.ProductId)">
+                                            <button  type="button" class="acart" onclick="AddToCart(@item.ProductId)">
                                                 <span>Add to Cart</span>
                                             </button>
                                         </div>
