--- a/WarehouseEcommerce/Areas/Shop/Views/Products/AddToCart.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/AddToCart.cshtml
@@ -5,7 +5,7 @@
 }
 
     <div class="about bg-white">
-        <div class="container card-container">
+        <div class="container card-container custom-max-width">
             <div class="row">
                 <div class="col-md-12 col-sm-12 bg-white my-account login">
                     <div class="about-cnt">
