--- a/WarehouseEcommerce/Views/Home/Blog.cshtml
+++ b/WarehouseEcommerce/Views/Home/Blog.cshtml
@@ -18,7 +18,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid pl-30 pr-30 mt-30">
+<div class="container-fluid pl-30 pr-30 mt-30 custom-max-width">
     <div class="description mt-30 mb-30 text-center">
         <div class="text-center">
             <h2 style="font-size: 45px;">Blog & News</h2>
@@ -30,7 +30,7 @@
     </div>
 </div>
 
-<div class="container-fluid pl-30 pr-30 mt-30">
+<div class="container-fluid pl-30 pr-30 mt-30 custom-max-width">
     <div class="col-md-6">
         <a href="https://shop.ganedata.co.uk/blog/category/ganenews/">
             <div class="grey-bg1 pt-30 pb-30 pl-40 pr-40 mb-10">
