--- a/WarehouseEcommerce/Views/Home/DigitalSignage.cshtml
+++ b/WarehouseEcommerce/Views/Home/DigitalSignage.cshtml
@@ -16,7 +16,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="row">
             <div class="col-md-6 description mt-15">
                 <h3 class="text-justify">It’s everything you need – just add displays</h3>
@@ -127,10 +127,6 @@
                     <div class="col-md-12">
                         <img style="width: 316px;height: 299px;margin-top: -81px;" src="~/img/gallery/3.jpg">
                         <img style=" width: 316px;margin-left: 10px;height: 227px;margin-top: -6px;" src="~/img/gallery/4.jpg">
-                        <div class="text-center mt-20">
-                            <h4><span style="color: #ff0000;"><a style="color: #ff0000;" href="uploads/Digital-Signage-Brochure-2019.pdf">Click Here To Download Our Digital Signage Brochure</a></span></h4>
-                            <h4><span style="color: #ff0000;"><a style="color: #ff0000;" href="uploads/vxl-illumineye-datasheet-25-04-14.pdf">Click Here To Download Our Software Brochure</a></span></h4>
-                        </div>
                     </div>
                 </div>
             </div>
