--- a/WarehouseEcommerce/Views/Home/Ecommerce.cshtml
+++ b/WarehouseEcommerce/Views/Home/Ecommerce.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p>
                 A unified eCommerce experience delivered through a single platform.<br>
