--- a/WarehouseEcommerce/Views/Home/Epod.cshtml
+++ b/WarehouseEcommerce/Views/Home/Epod.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p>Our electronic proof of delivery (<a href="https://spiritdatacapture.com/epod/">ePoD</a>) module is&nbsp; key a<strong> seamless delivery</strong> solution to major companies, including distribution and logistics organisations. This can make the difference between failure and success at such a critical stage of the delivery process.</p>
             <h2 class="mt-20"><strong>Benefits</strong></h2>
