--- a/WarehouseEcommerce/Views/Home/FleetTrackingDriverManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/FleetTrackingDriverManagement.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p style="text-align: justify;">
                 TrackSense provides a complete web-based GPS fleet tracking in real-time, with accurate route tracking, location maps, Geo-location, points of interest, harsh braking and excess speed telemetry.<br>
