--- a/WarehouseEcommerce/Views/Home/GetStarted.cshtml
+++ b/WarehouseEcommerce/Views/Home/GetStarted.cshtml
@@ -20,7 +20,7 @@
 </div>
 
 <div class="contact-bottom-area ptb-100">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-12">
             <div class="pb-20 text-left">
                 <h4 style="font-size:16px;font-weight:700;">Book a Demo today and see the benefits for yourself</h4>
