--- a/WarehouseEcommerce/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
 <!-- slider-area-end-->
 <!-- What-wedo-area-start -->
 <div class="what-we-do-area pt-50 pb-50">
-    <div class="container-fluid pl-30 pr-30 index-container">
+    <div class="container-fluid pl-30 pr-30 custom-max-width ">
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
