--- a/WarehouseEcommerce/Views/Home/MobileVanSales.cshtml
+++ b/WarehouseEcommerce/Views/Home/MobileVanSales.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p>
                 Our van sales solution combines intelligent Mobile Point of Sales functionality with paperless process management and route optimization to create a powerful solution for your mobile workforce. Application using the latest rugged Android PDA’s or tablets with real-time data transfers between field and office, mobile workers are operationally connected to your business at all times.<br>
