--- a/WarehouseEcommerce/Views/Home/News.cshtml
+++ b/WarehouseEcommerce/Views/Home/News.cshtml
@@ -17,7 +17,7 @@
 </div>
 
 
-<div class="container-fluid pl-30 pr-30">
+<div class="container-fluid pl-30 pr-30 custom-max-width">
     <div class="row">
         <div class="col-md-8 col-sm-8 mt-sm-50">
             <article class="recent-news-entry">
