--- a/WarehouseEcommerce/Views/Home/PrivacyPolicy.cshtml
+++ b/WarehouseEcommerce/Views/Home/PrivacyPolicy.cshtml
@@ -15,7 +15,7 @@
     </div>
 </div>
 
-<div class="container-fluid pl-30 pr-30">
+<div class="container-fluid pl-30 pr-30 custom-max-width">
     <div class="description mt-20">
         <p><span style="font-size: 18px; color: #000000;"><strong>Contact Details</strong></span></p>
 
