--- a/WarehouseEcommerce/Views/Home/Promotions.cshtml
+++ b/WarehouseEcommerce/Views/Home/Promotions.cshtml
@@ -38,7 +38,7 @@
 </div>
 
 <div class="full-width-grey">
-    <div class="container-fluid pl-30 pr-30 mb-30">
+    <div class="container-fluid pl-30 pr-30 mb-30 custom-max-width">
         <div class="col-md-3">
             <div class="promotion text-center">
                 <img src="~/img/bg/cipher.jpg" class="img-responsive mb-20 mt-20">
