--- a/WarehouseEcommerce/Views/Home/Services.cshtml
+++ b/WarehouseEcommerce/Views/Home/Services.cshtml
@@ -19,7 +19,7 @@
     </div>
 </div>
 <div class="services-info description">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6">
             <div class="text-justify">
                 <div style="padding: auto; color: #ffffff;">
@@ -45,13 +45,13 @@
 <div class="slider-area">
     <div style="background-image:url(img/bg/parallax1.jpg);">
         <div class=" ptb-100" style="background-color: #000000; opacity: 0.8">
-            <div class="container-fluid pl-30 pr-30">
+            <div class="container-fluid pl-30 pr-30 custom-max-width">
                 <div class="slider-text text-center">
                     <h1 class="cd-headline clip is-full-width">
                         <span><b class="is-visible"><i class="fa fa-gears"> </i>Our Services</b></span>
                     </h1>
                 </div>
-                <div class="container-fluid pl-30 pr-30">
+                <div class="container-fluid pl-30 pr-30 our-services">
                     <div class="col-md-4 mb-20">
                         <div style="border: 3px solid #00b54a;" class="pt-30">
                             <div class="single-What-wedo mb-30 text-white">
@@ -135,7 +135,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid pl-30 pr-30">
+<div class="container-fluid pl-30 pr-30 custom-max-width">
     <div class="container-fluid pl-30 pr-30 pt-30 pb-30">
         <div class="col-sm-6 text-right">
             <h3 style="font-size:18px;font-weight:600;"><span>Industries</span></h3>
@@ -154,7 +154,7 @@
     </div>
 </div>
 <div style="background-color: #eeeeee;" class="pt-30 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="container-fluid pl-30 pr-30 pt-30 pb-30">
             <div class="col-sm-6">
                 <img class="img-responsive mb-20" src="~/img/bg/Industries.jpg">
