--- a/WarehouseEcommerce/Views/Home/StockControl.cshtml
+++ b/WarehouseEcommerce/Views/Home/StockControl.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p style="text-align: justify;">
                 Our Stock control module includes inventory management andtraceability, with additional options that include landed cost analysis, and product profiles. This module tracks inventory movements in and out of different warehouse locations, as well as extensive user-defined analysis capabilities, across items and multiple warehouses.<br>
