--- a/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p class="description">
                 Our warehouse management software (WMS) is designed to automate all of the tasks performed within your warehouse. From the point of goods receipt to ultimate dispatch to your customers, warehouse management provides a level of automation that ensures that you can maximize your warehouse efficiency without compromise to accuracy.<br>
