--- a/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-    <div id="common-home" class="container-fluid">
+    <div id="common-home" class="container-fluid custom-max-width">
         <div class="row">
             <div id="content" class="col-md-12">
                 @Html.Partial("_SliderPartial")
