--- a/WarehouseEcommerce/Views/Home/BusinessIntelligence.cshtml
+++ b/WarehouseEcommerce/Views/Home/BusinessIntelligence.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p>
                 <strong>Data and insights that help retailers deliver enhanced shopper experiences.</strong><br>
