--- a/WarehouseEcommerce/Views/Home/LossPrevention.cshtml
+++ b/WarehouseEcommerce/Views/Home/LossPrevention.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p style="text-align: justify;">
                 <strong>Designed to Protect Merchandise and Reduce Shrink</strong><br>
