--- a/WarehouseEcommerce/Views/Home/MobileDeviceManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/MobileDeviceManagement.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p style="text-align: justify;">
                 <strong>Fusion UEM – unified endpoint management</strong><br>
