--- a/WarehouseEcommerce/Views/Home/YardManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/YardManagement.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width">
         <div class="col-md-6 description">
             <p style="text-align: justify;">
                 With the constant movement of trailers, your yard is dynamic. Knowing the location and movement of assets and resources is critical to managing a safe and productive yard.<br>
